samples/eventchain/invalid/approval-history.verified
1|ApprovalApproved|approvalId=approval-1
